--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.3"
+
 services:
   node-app:
    container_name: cont-node-app2
@@ -22,9 +22,10 @@ services:
      ports:
       - "8080:80"
      volumes:
-      - C:/Users/amrya/Desktop/nodeapp/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
      depends_on:
       - node-app
  
 volumes:
   mongo-db:
+  
